tests/fixtures/readmes/invalid/missing_architecture.readme
Short:        Missing architecture
Uploader:     test@example.com (T. Test)
Type:         util/misc

Architecture field is absent.
